--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,6 +5,9 @@
 		<!-- Replace vite.svg with your logo -->
 		<link rel="icon" type="image/svg+xml" href="./src/assets/quizai.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preload" as="style" href="./src/App.css">
 		<title>QuizAI</title>
 	</head>
 	<body>
