--- a/quiz/index.html
+++ b/quiz/index.html
@@ -7,7 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preload" as="style" href="./src/App.css">
+<link rel="stylesheet" href="./src/App.css">
+<link rel="prefetch" href="/dashboard">
+<link rel="prefetch" href="/quiz">
+
 		<title>QuizAI</title>
 	</head>
 	<body>
